Fix pressure sensitivity in the Scratch Pad

BUG:328955